updated site to ...

--- a/page3.html
+++ b/page3.html
@@ -107,35 +107,35 @@
 
 		</div>
 	<div class="dccom dccomBottom copy"><div id="dccom_gdImageGallery">
-	<div class="gdImage newLine2 newLine3 newLine4 newLine5 newLine6" style="min-width:180px;width:180px;">
+	<div class="gdImage newLine2 newLine3 newLine4 newLine5 newLine6" style="min-width:1200px;width:580px;">
 		<a class="fancybox" rel="group" title="Environmental Plant" href="img/plantenvironmental.jpg">
 		<img src="img/plantenvironmental.jpg" width="150"  height="100" alt="Installation" border="0"></a>
 		<div class="title">Plant Functionality Work by Us</div>
 		<div id="description" style="min-width:180px;width:180px;">&nbsp;</div>
 	</div>
 
-	<div class="gdImage" style="min-width:180px;width:180px;">
+	<div class="gdImage" style="min-width:1200px;width:180px;">
 		<a class="fancybox" rel="group" title="Facilities in Lab" href="img/BASF-chemical-lab.jpg">
 		<img src="img/BASF-chemical-lab.jpg" width="150"  height="100" alt="KI Facilities 2015" border="0"></a>
 		<div class="title">KI Facilities 2015</div>
 		<div id="description" style="min-width:180px;width:180px;">&nbsp;</div>
 	</div>
 
-	<div class="gdImage newLine2" style="min-width:180px;width:180px;">
+	<div class="gdImage newLine2" style="min-width:1200px;width:180px;">
 		<a class="fancybox" rel="group" title="KI Facilities 2015" href="img/11874189-Le-laboratoire-de-chimie-sur-un-fond-blanc-vecteur-Banque-d'images.jpg">
 		<img src="img/11874189-Le-laboratoire-de-chimie-sur-un-fond-blanc-vecteur-Banque-d'images.jpg" width="150"  height="100" alt="Biocel Facilities 2015" border="0"></a>
 		<div class="title">KI Facilities 2015</div>
 		<div id="description" style="min-width:180px;width:180px;"></div>
 	</div>
 
-	<div class="gdImage newLine3" style="min-width:180px;width:180px;">
+	<div class="gdImage newLine3" style="min-width:1200px;width:180px;">
 		<a class="fancybox" rel="group" title="Structure" href="img/13762375-close-up-of-Molecular-structure-model-Stock-Photo-chemistry-dna-molecular.jpg">
 		<img src="img/13762375-close-up-of-Molecular-structure-model-Stock-Photo-chemistry-dna-molecular.jpg" width="150"  height="100" alt="New Storage Tanks 2015" border="0"></a>
 		<div class="title">Structure</div>
-		<div id="description" style="min-width:180px;width:180px;";</div>
+		<div id="description" style="min-width:180px;width:180px;";></div>
 	</div>
 
-	<div class="gdImage newLine2 newLine4" style="min-width:180px;width:180px;">
+	<div class="gdImage newLine2 newLine4" style="min-width:1200px;width:180px;">
 		<a class="fancybox" rel="group" title="Lab Facilities" href="img/manhandlinginwoprkshop.jpg">
 		<img src="img/manhandlinginwoprkshop.jpg" width="150"  height="100" alt="Extra Storage Facilities" border="0"></a>
 		<div class="title">Extra Storage Facilities</div>
@@ -163,7 +163,7 @@
 				<a href="https://www.facebook.com/khzer.iqbal" target="_blank"><i class="fa fa-facebook-square"></i></a>
 				<a href="https://twitter.com/khzeriqbal" target="_blank"><i class="fa fa-twitter-square"></i></a>
 				<ul>
-					<li class="first lev1 navcookie-policy"><a href="Cookie Policy" title="Cookie Policy">Cookie Policy</a></li><li class="lev1 navprivacy-policy"><a href="Privacy Policy" title="Privacy Policy">Privacy Policy</a></li><li class="lev1 navterms-of-use"><a href="Terms of use" title="Terms of use">Terms of use</a></li><li class="lev1 navsitemap"><a href="Sitemap" title="Sitemap">Sitemap</a></li>	
+					<li class="first lev1 navcookie-policy"><a href="#Cookie Policy" title="Cookie Policy">Cookie Policy</a></li><li class="lev1 navprivacy-policy"><a href="#Privacy Policy" title="Privacy Policy">Privacy Policy</a></li><li class="lev1 navterms-of-use"><a href="#Terms of use" title="Terms of use">Terms of use</a></li><li class="lev1 navsitemap"><a href="#Sitemap" title="Sitemap">Sitemap</a></li>	
 				</ul>
             </div>	
 			</div>
