updated site to ...

--- a/page6-images.html
+++ b/page6-images.html
@@ -209,7 +209,8 @@
 				<a href="https://www.facebook.com/khzer.iqbal" target="_blank"><i class="fa fa-facebook-square"></i></a>
 				<a href="https://twitter.com/khzeriqbal" target="_blank"><i class="fa fa-twitter-square"></i></a>
 				<ul>
-					<li class="first lev1 navcookie-policy"><a href="#Cookie Policy" title="Cookie Policy">Cookie Policy</a></li><li class="lev1 navprivacy-policy"><a href="#Privacy Policy" title="Privacy Policy">Privacy Policy</a></li><li class="lev1 navterms-of-use"><a href="#Terms of use" title="Terms of use">Terms of use</a></li><li class="lev1 navsitemap"><a href="#Sitemap" title="Sitemap">Sitemap</a></li>	
+					<li class="first lev1 navcookie-policy"><a href="#Cookie Policy" title="Cookie Policy">Cookie Policy</a></li><li class="lev1 navprivacy-policy"><a href="#Privacy Policy" title="Privacy Policy">Privacy Policy</a></li><li class="lev1 navterms-of-use"><a href="#Terms of use" title="Terms of use">Terms of use</a></li>
+                   <li class="lev1 navsitemap"><a href="img/sitemap.jpg" title="Sitemap">Sitemap</a></li>	
 				</ul>
             </div>	
 			</div>
