--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 			
 				<li class="col span3">
 					<a href="page6-images.html#reagents">
-						<i class="fa fa-cog"></i>
+                        <i class="fa fa-cog" ></i>
 						<h3>Analytical Grade Reagents</h3>
 					</a>
 				</li>
@@ -179,23 +179,23 @@
 				</li>
 			
 				<li class="col span3">
-					<a href="Upcoming">
+					<a href="page4.html#Environmental Services">
 						<i class="fa fa-cog"></i>
-						<h3>Upcoming Analytical Section</h3>
+						<h3>Environmental Services</h3>
 					</a>
 				</li>
 			
 				<li class="col span3">
-					<a href="Upcoming">
+					<a href="page4.html#Callibration">
 						<i class="fa fa-cog"></i>
-						<h3>Upcoming Environmental Section </h3>
+						<h3>Callibration </h3>
 					</a>
 				</li>
 			
 				<li class="col span3">
-					<a href="Upcoming Industrial Section">
+					<a href="page4.html#Troubleshooting">
 						<i class="fa fa-cog"></i>
-						<h3>Upcoming Industrial Section</h3>
+						<h3>Troubleshooting</h3>
 					</a>
 				</li>
             
@@ -357,7 +357,7 @@
 					<li class="first lev1 navcookie-policy"><a href="#Cookie Policy" title="Cookie Policy">Cookie Policy</a></li>
                     <li class="lev1 navprivacy-policy"><a href="#Privacy Policy" title="Privacy Policy">Privacy Policy</a></li>
                     <li class="lev1 navterms-of-use"><a href="#Terms of use" title="Terms of use">Terms of use</a></li>
-                    <li class="lev1 navsitemap"><a href="#Sitemap" title="Sitemap">Sitemap</a></li>	
+                    <li class="lev1 navsitemap"><a href="img/sitemap.jpg" title="Sitemap">Sitemap</a></li>	
 				</ul>
 				
 			</div>
