--- a/page2.html
+++ b/page2.html
@@ -204,7 +204,8 @@
 				<a href="https://www.facebook.com/khzer.iqbal" target="_blank"><i class="fa fa-facebook-square"></i></a>
 				<a href="https://twitter.com/khzeriqbal" target="_blank"><i class="fa fa-twitter-square"></i></a>
 				<ul>
-					<li class="first lev1 navcookie-policy"><a href="#Cookie Policy" title="Cookie Policy">Cookie Policy</a></li><li class="lev1 navprivacy-policy"><a href="#privacy-policy" title="Privacy Policy">Privacy Policy</a></li><li class="lev1 navterms-of-use"><a href="#terms-of-use" title="Terms of use">Terms of use</a></li><li class="lev1 navsitemap"><a href="#sitemap" title="Sitemap">Sitemap</a></li>	
+					<li class="first lev1 navcookie-policy"><a href="#Cookie Policy" title="Cookie Policy">Cookie Policy</a></li><li class="lev1 navprivacy-policy"><a href="#privacy-policy" title="Privacy Policy">Privacy Policy</a></li><li class="lev1 navterms-of-use"><a href="#terms-of-use" title="Terms of use">Terms of use</a></li>
+                    <li class="lev1 navsitemap"><a href="img/sitemap.jpg" title="Sitemap">Sitemap</a></li>	
                 </ul>
 				
 			</div>
